@@ -1,5 +1,7 @@
 # Copyright 2007 David Leverton
 # Distributed under the terms of the GNU General Public License v2
+# Based in part upon 'screen-4.0.3.ebuild' from Gentoo, which is:
+#     Copyright 1999-2007 Gentoo Foundation
 
 DESCRIPTION="A full-screen terminal multiplexer/window manager"
 HOMEPAGE="http://www.gnu.org/software/screen/"
