@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: fixes group names as arguments to useradd and usermod
+
 --- shadow-4.0.18.1.orig/src/useradd.c	2006-07-28 19:42:48.000000000 +0200
 +++ shadow-4.0.18.1/src/useradd.c	2006-08-04 09:24:34.000000000 +0200
 @@ -203,13 +203,17 @@
