@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: forces -fPIC to be used when building shared libraries
+
 --- zlib-1.2.1/configure
 +++ zlib-1.2.1/configure
 @@ -73,7 +73,12 @@
