@@ -1,6 +1,11 @@
 ChangeLog for Shadow
 ====================
 
+2008-03-12 David Leverton <dleverton@exherbo.org>
+
+	* files/shadow-4.0.18.1-useradd-usermod.patch: Add
+	Source/Upstream/Reason headers to patch.
+
 2008-01-31 Mike Kelly <pioto@pioto.org>
 
 	* shadow-4.0.18.1-r1.exheres-0: New and improved version to work
