@@ -1,6 +1,11 @@
 ChangeLog for Zlib
 ==================
 
+2008-03-12 David Leverton <dleverton@exherbo.org>
+
+	* files/zlib-1.2.1-fPIC.patch: Add Source/Upstream/Reason headers
+	to patch.
+
 2008-02-21 Bo Ørsted Andresen <zlin@exherbo.org>
 
 	* zlib-1.2.3.exheres-0: Use DEFAULT_SRC_PREPARE_PATCHES.
