@@ -1,6 +1,11 @@
 ChangeLog for Screen
 ====================
 
+2008-03-12 David Leverton <dleverton@exherbo.org>
+
+	* screen-4.0.3.exheres-0: Add based-on-Gentoo
+	copyright/attribution lines.
+
 2007-10-16 David Leverton <dleverton@exherbo.org>
 
 	+ +screen-4.0.3.exheres-0: Add screen.
